--- a/PropertyApp/Views/Property/PropertyDetails.cshtml
+++ b/PropertyApp/Views/Property/PropertyDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Web;
+@{
       Layout = null;
 } 
 
@@ -8,7 +9,7 @@
             <div class="container">
                 <div class="row photos">
                     <div  ng-repeat="image in $ctrl.property.ImagePaths" class="col-lg-6 col-md-6 col-sm-6">
-                        <a data-lightbox="photos" data-toggle="modal" data-target="#myModal"><img class="img-responsive details-image" src="{{ image }}" alt="Slide Image"></a>
+                        <a data-lightbox="photos" data-toggle="modal" data-target="#myModal"><img class="img-responsive details-image" ng-src="~/Property/Image?ext={{image}}" alt="Slide Image"></a>
                     </div>                   
                 </div>
             </div>
